--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@ client/node_modules/
 server/node_modules/
 
 # Build output
-client/dist/
-server/dist/
-server/build/
+client/build/
+# server/dist/
+# server/build/
 
 # Logs
 npm-debug.log*
