--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "task-tracker-frontend",
+  "name": "client",
+  "homepage": "https://internal.digital-mafia.co.za/task-manager",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,13 +14,16 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
+  },
   "scripts": {
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
