Connecting to remote db @render.com

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,6 @@
 PORT=5000
-DB_USER=postgres
-DB_PASSWORD=admin
-DB_NAME=tasktracker
-DB_HOST=localhost
+DB_USER=dm_admin
+DB_PASSWORD=qoQVIFwRAJBkgO0aYl426h5MWu7ealwB
+DB_NAME=tasktracker_2chf
+DB_HOST=dpg-d1j6m2emcj7s73a9t45g-a
+DB_CONN_STR=postgresql://dm_admin:qoQVIFwRAJBkgO0aYl426h5MWu7ealwB@dpg-d1j6m2emcj7s73a9t45g-a.frankfurt-postgres.render.com/tasktracker_2chf
